[gd_scene load_steps=14 format=3 uid="uid://bl6jp4ep55q53"]

[ext_resource type="Texture2D" uid="uid://c4hpu74p8ceej" path="res://cptm.png" id="4_6maps"]
[ext_resource type="Script" uid="uid://djeolnt6s3yry" path="res://dataManager.gd" id="4_453mu"]
[ext_resource type="Script" uid="uid://chx48legt1la6" path="res://stationData.gd" id="5_6maps"]
[ext_resource type="Script" uid="uid://b1jn2oua6prhv" path="res://button.gd" id="5_7pmop"]
[ext_resource type="FontFile" uid="uid://fxlm6o11a3u8" path="res://fonts/Pacifico-Regular.ttf" id="5_lple0"]
[ext_resource type="Script" uid="uid://chx0f33v7wqrg" path="res://option_button.gd" id="6_b26h7"]
[ext_resource type="Theme" uid="uid://d32q7xuej573a" path="res://temadosmenu.tres" id="6_kyyy7"]
[ext_resource type="Texture2D" uid="uid://bs2vnhspaoefr" path="res://tela.png" id="7_6maps"]
[ext_resource type="Script" uid="uid://cxfvdwapsoj1h" path="res://option_button_2.gd" id="7_a8wb5"]
[ext_resource type="StyleBox" uid="uid://d0idnhpoe6d74" path="res://temaovrdosbotao.tres" id="7_lple0"]
[ext_resource type="Resource" uid="uid://chwd6kowd8sbx" path="res://data.tres" id="9_aycgk"]

[sub_resource type="Resource" id="Resource_aycgk"]
script = ExtResource("5_6maps")
metadata/_custom_type_script = "uid://chx48legt1la6"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0elsd"]
bg_color = Color(0.701961, 0.85098, 0.960784, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Node2D" type="Node2D"]

[node name="DataManager" type="Node" parent="."]
script = ExtResource("4_453mu")
sData = SubResource("Resource_aycgk")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 3.0
offset_top = -1.0
offset_right = 538.0
offset_bottom = 954.0
texture = ExtResource("7_6maps")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 57.0
offset_top = 226.0
offset_right = 491.0
offset_bottom = 560.0
texture = ExtResource("4_6maps")
expand_mode = 1

[node name="Button" type="Button" parent="."]
offset_left = 145.0
offset_top = 799.0
offset_right = 395.0
offset_bottom = 890.0
theme_override_colors/font_disabled_color = Color(0.101961, 0.101961, 0.501961, 1)
theme_override_colors/font_hover_pressed_color = Color(0.101961, 0.101961, 0.501961, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.101961, 0.101961, 0.501961, 1)
theme_override_colors/icon_normal_color = Color(0.101961, 0.101961, 0.501961, 1)
theme_override_colors/font_outline_color = Color(0.101961, 0.101961, 0.501961, 1)
theme_override_colors/font_color = Color(0.101961, 0.101961, 0.501961, 1)
theme_override_colors/font_focus_color = Color(0.101961, 0.101961, 0.501961, 1)
theme_override_colors/font_pressed_color = Color(0.101961, 0.101961, 0.501961, 1)
theme_override_fonts/font = ExtResource("5_lple0")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/hover = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_0elsd")
theme_override_styles/normal = SubResource("StyleBoxFlat_0elsd")
text = "Reportar"
script = ExtResource("5_7pmop")

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 87.0
offset_top = 620.0
offset_right = 480.0
offset_bottom = 679.0
theme = ExtResource("6_kyyy7")
theme_override_styles/focus = ExtResource("7_lple0")
theme_override_styles/disabled_mirrored = ExtResource("7_lple0")
theme_override_styles/disabled = ExtResource("7_lple0")
theme_override_styles/hover_pressed_mirrored = ExtResource("7_lple0")
theme_override_styles/hover_pressed = ExtResource("7_lple0")
theme_override_styles/hover_mirrored = ExtResource("7_lple0")
theme_override_styles/hover = ExtResource("7_lple0")
theme_override_styles/pressed_mirrored = ExtResource("7_lple0")
theme_override_styles/pressed = ExtResource("7_lple0")
theme_override_styles/normal_mirrored = ExtResource("7_lple0")
theme_override_styles/normal = ExtResource("7_lple0")
script = ExtResource("6_b26h7")
sData = ExtResource("9_aycgk")

[node name="OptionButton2" type="OptionButton" parent="."]
offset_left = 84.0
offset_top = 708.0
offset_right = 482.0
offset_bottom = 765.0
theme = ExtResource("6_kyyy7")
theme_override_constants/outline_size = 0
theme_override_styles/focus = ExtResource("7_lple0")
theme_override_styles/disabled_mirrored = ExtResource("7_lple0")
theme_override_styles/disabled = ExtResource("7_lple0")
theme_override_styles/hover_pressed_mirrored = ExtResource("7_lple0")
theme_override_styles/hover_pressed = ExtResource("7_lple0")
theme_override_styles/hover_mirrored = ExtResource("7_lple0")
theme_override_styles/hover = ExtResource("7_lple0")
theme_override_styles/pressed_mirrored = ExtResource("7_lple0")
theme_override_styles/pressed = ExtResource("7_lple0")
theme_override_styles/normal_mirrored = ExtResource("7_lple0")
theme_override_styles/normal = ExtResource("7_lple0")
script = ExtResource("7_a8wb5")
sData = ExtResource("9_aycgk")

[connection signal="dataStart" from="DataManager" to="OptionButton" method="_on_data_manager_data_start"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="item_selected" from="OptionButton" to="OptionButton" method="_on_item_selected"]
[connection signal="selectedLine" from="OptionButton" to="OptionButton2" method="_on_option_button_selected_line"]
